ficha-escri-opn

--- a/CSS/detalle-libro.css
+++ b/CSS/detalle-libro.css
@@ -178,12 +178,75 @@ button{
     display: flex;
     justify-content: space-evenly;
 }
-    
-    
+
+.ficha {
+    padding: 50px 7%;
+}
+
+.parra__titulo{
+    text-align: center;
+    border-bottom: 2px solid black;
+}
+
+li{
+    list-style-type: none;
+}
+
+.ficha__lista1{
+    display: inline-block;
+    margin: 3% 40% 3% 5%;
+}
+
+.ficha__lista2{
+    display: inline-block;
+}
 
 
+.escritor{
+    padding: 50px 7%;
+}
 
+.escritor__parrafo{
+    display: inline-block;
+    width: 300px;
+    margin: 3% 30% 3% 5%;
+}
 
+.escritor__parrafo>.span{
+    font-size: x-large;
+}
+
+.negri{
+    font-size: x-large;
+}
+
+.escritor__imagen{
+    vertical-align:sub;
+}
+
+.opn{
+    padding: 50px 7%;
+}   
+
+.opn__parrafo{
+    display: inline-block;
+    width: 700px;
+    margin: 3% 10% 3% 5%;
+}
+
+.valor{
+    display: inline-block;
+    display: flex;
+}
+
+.autor1__caja{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    display: inline-block;
+    vertical-align: text-bottom;
+    padding: 5% 5% 5% 5%;
+}
 
 
 
