--- a/css/categorias.css
+++ b/css/categorias.css
@@ -93,7 +93,7 @@ figure {
     font-family: 'Open-Bold';
 }
 .card-libro__img {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .card-libro__img  img{
@@ -104,23 +104,40 @@ figure {
 .container-libro {
     display: flex;
     justify-content: center;
-    width: 280px;
-    height: 425px;
-    background-color: var(--coral-color);
+    width: 220px;
+    height: 350px;
+    margin-left: 100px;
+    background-color: var(--secondary-color);
+    flex-direction: column;
+    align-items: center;
 }
 
 .container-libro .card-libro {
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    height: 350px;
+    width: 200px;
+    height: 270px;
     margin-top: 20px;
     background-color:var(--neutral-white-color);
 }
 
 .card-libro__text{
+    font-size: smaller;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-left: 25px;
+    margin-left: 18px;
+}
+
+
+.boton-detalle{
+    text-decoration: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    height: 30px;
+    width: 200px;
+    text-align: center;
+    align-items: center;
+    border-radius:10px;
+    border-color: var(--coral-color);
+    color: var(--neutral-white-color);
+    background-color: var(--coral-color);
 }
