--- a/CSS/detalle-libro.css
+++ b/CSS/detalle-libro.css
@@ -4,6 +4,8 @@
 }
 
 :root {
+    --color-cafe: hsl(17, 88%, 23%);
+    --color-cafe-claro: rgba(164, 92, 64, 0.699);
     --primary-color: hsl(17, 44%, 45%);
     --secondary-color: rgba(185, 92, 80, 1);
     --coral-color: rgba(222, 132, 125, 1);
@@ -248,5 +250,51 @@ li{
     padding: 5% 5% 5% 5%;
 }
 
+.dispo{
+    padding: 50px 7%;
+}
 
+.caja-datos{
+    display: inline-block;
+    padding: 5% 5% 5% 5%;
+    width: 450px;
+    height: 500px;
+    background-color: var(--color-cafe-claro);
+}
 
+.map{
+    display: inline-block;
+    vertical-align: top;
+}
+
+.caja-datos__search-input{
+    width: 100%;
+    height: 33px;
+    border-radius: 10px;
+    border: 2px solid;
+    background-color:var(--color-cafe-claro);
+    color:var(--color-cafe);
+    margin: 2px;
+    } 
+    
+.caja-datos__search-input::placeholder {
+    color:var(--color-cafe);
+    padding-left: 15px;
+    font-family: 'Open-Bold';
+  }
+
+.caja-datos__tex{
+    margin-top: 8%;
+    border-top: 3px solid var(--color-cafe);
+    padding-top: 5%;
+}
+
+.caja-datos__tex-img{
+    width: 50px;
+    height: 50px;
+    float: left;
+}
+
+.caja-datos__tex-tit{
+    color: var(--color-cafe);
+}
