--- a/css/categorias.css
+++ b/css/categorias.css
@@ -17,10 +17,12 @@
     padding: 0;
     font-family: 'Delius Unicase', cursive;
 }
-.titulo-principal{
+
+.titulo-principal {
     text-align: center;
     margin-bottom: 20px;
 }
+
 header {
     max-width: 100%;
     height: 100px;
@@ -95,11 +97,12 @@ figure {
     color: var(--neutral-white-color);
     font-family: 'Open-Bold';
 }
+
 .card-libro__img {
     margin-top: 10px;
 }
 
-.card-libro__img  img{
+.card-libro__img img {
     object-fit: cover;
 }
 
@@ -120,10 +123,10 @@ figure {
     width: 200px;
     height: 270px;
     margin-top: 20px;
-    background-color:var(--neutral-white-color);
+    background-color: var(--neutral-white-color);
 }
 
-.card-libro__text{
+.card-libro__text {
     font-size: smaller;
     display: flex;
     justify-content: center;
@@ -131,33 +134,31 @@ figure {
     margin-left: 18px;
 }
 
-main{
+main {
     display: flex;
     flex-direction: row;
 }
-aside{
+
+aside {
     width: 10%;
     margin-top: 20px;
 }
 
 .filtros-lista li {
     list-style: none;
-    padding-top: 5px;
-    margin-left: 30px;
-    width: 150px;
-    height: 30px;
-    font-size: medium;   
-     border-bottom: 1px solid black;
+    font-size: medium;
 }
 
-section{
+
+
+section {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.boton-detalle{
+.boton-detalle {
     text-decoration: none;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -165,8 +166,20 @@ section{
     width: 200px;
     text-align: center;
     align-items: center;
-    border-radius:10px;
+    border-radius: 10px;
     border-color: var(--coral-color);
     color: var(--neutral-white-color);
     background-color: var(--coral-color);
+}
+
+.filtros-elemento {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 15px;
+    width: 200px;
+    height: 30px;
+    border-bottom: 1px solid black;
+    font-size: medium;
+    margin-top: 10px;
 }
